feat: update sso sipadu

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ OPENAI_API_KEY=<YOUR_OPENAI_KEY>
 OPENAI_CHAT_MODEL=gpt-4o-mini
 OPENAI_EMBEDDINGS_MODEL=text-embedding-3-large
 
+# SIPADU Integration (untuk production)
+SIPADU_API_BASE=<SIPADU API BASE URL>
+
+# settings for Kotaemon Hub
+KH_HIDE_EXTRA_TABS=true
+
 # settings for Azure OpenAI
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_KEY=
@@ -14,7 +20,7 @@ AZURE_OPENAI_CHAT_DEPLOYMENT=gpt-35-turbo
 AZURE_OPENAI_EMBEDDINGS_DEPLOYMENT=text-embedding-ada-002
 
 # settings for Cohere
-COHERE_API_KEY=<COHERE_API_KEY>
+COHERE_API_KEY=<COHERE_API_KEY
 
 # settings for Mistral
 # MISTRAL_API_KEY=placeholder
