chore: update production

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,12 @@ VOYAGE_API_KEY=<VOYAGE_API_KEY>
 LOCAL_MODEL=qwen2.5:7b
 LOCAL_MODEL_EMBEDDINGS=nomic-embed-text
 
+# Optimization settings for local/slow LLM endpoints
+# Set to true to disable mindmap, citation highlighting, and other LLM-intensive features
+# This prevents timeout errors when using local or slow models (e.g., RunPod endpoints)
+USE_LOW_LLM_REQUESTS=true
+KH_USE_LOW_LLM_REQUESTS=true
+
 # settings for GraphRAG
 GRAPHRAG_API_KEY=<YOUR_OPENAI_KEY>
 GRAPHRAG_LLM_MODEL=gpt-4o-mini
